--- a/tableScript.html
+++ b/tableScript.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+    <div>
+        </div>
+    </header>
     <script>
         document.write("<table border = '1px' cellspacing = 0 cellpadding = 10>")
         var a = [
