--- a/tableScript.html
+++ b/tableScript.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header>
-    <div>
-        </div>
+        <navbar>
+            <a>
+            </navbar>
     </header>
     <script>
         document.write("<table border = '1px' cellspacing = 0 cellpadding = 10>")
