--- a/tableScript.html
+++ b/tableScript.html
@@ -9,9 +9,14 @@
 <body>
     <header>
         <navbar>
-            <a>
-            </navbar>
+            <a href="">Home</a>  
+            <a href="#Games">Games</a>
+            <a href="">News</a>
+            <a href="">Contact us</a>  
+        </navbar>
     </header>
+
+    <div id="Games">
     <script>
         document.write("<table border = '1px' cellspacing = 0 cellpadding = 10>")
         var a = [
@@ -49,5 +54,6 @@
     document.write("</table>");
     
     </script>
+    </div>
 </body>
 </html>
