--- a/tableScript.html
+++ b/tableScript.html
@@ -11,12 +11,17 @@
         <navbar>
             <a href="">Home</a>  
             <a href="#Games">Games</a>
+            <a href="#java">Java</a>
             <a href="">News</a>
             <a href="">Contact us</a>  
         </navbar>
     </header>
 
-    <div id="Games">
+    <div id="Games"> 
+        
+    </div>
+    
+    <div id="java">
     <script>
         document.write("<table border = '1px' cellspacing = 0 cellpadding = 10>")
         var a = [
