--- a/tableScript.html
+++ b/tableScript.html
@@ -18,7 +18,11 @@
     </header>
 
     <div id="Games"> 
-        
+          <iframe width="100%" height="500" src="https://www.addictinggames.com/embed/html5-games/24998" scrolling="no"></iframe>
+
+    <br>
+
+    <iframe width="100%" height="100%" src="https://www.addictinggames.com/embed/html5-games/24598" scrolling="no"></iframe>
     </div>
     
     <div id="java">
